--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -11,8 +11,11 @@
     <!-- Bootstrap CSS -->
     <link th:href="@{/bootstrap-icons-1.9.1/bootstrap-icons.css}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" th:href="@{/css/bootstrap/bootstrap.min.css}" type="text/css">
-    <script th:src="@{/js/bootstrap/bootstrap.bundle.js}" type="text/javascript"></script>
-    <script th:src="@{/js/bootstrap/bootstrap.min.js}" type="text/javascript"></script>
+    <!--  <scr#ipt t#h:src="@{/js/bootstra#p/boot#strap.bundle.js}" typ#e="text/java#script"></scr#ipt>
+
+         //kkk tive q zuar com isso, thymeleaf esta lendo mesmo comentado
+
+    <sc#ript t#h:s#rc="@{/js/bootstrap/bootstra#p.min.js}" ty#pe="#text/javasc#ript"></scri#pt>-->
 </head>
 
 <body style="background: #ffffff;">
@@ -35,7 +38,12 @@
 
                     </ul>
                     <form class="d-flex">
-                        <a class="btn btn-light" th:href="${#authorization.expression('hasAnyAuthority(''ROLE_ADMIN'')')} ? @{~/gerenciarDash.html} : @{~/dash.html}" role="button">Entrar</a>
+                        <div sec:authorize="isAuthenticated()">
+                            <a class="btn btn-light" th:href="${#authorization.expression('hasAnyAuthority(''ROLE_ADMIN'')')} ? @{~/gerenciarDash.html} : @{~/dash.html}" role="button">Entrar</a>
+                        </div>
+                        <div sec:authorize="isAnonymous()"> 
+                            <a class="btn btn-light" th:href="@{~/login.html}" role="button">Entrar</a>
+                        </div>
                     </form>
                 </div>
             </div>
@@ -139,9 +147,6 @@
             </p>
         </div>
     </footer>
-    <!-- Bootstrap JavaScript Libraries -->
-    <!--  <script src="./js/popper.min.js" type="text/javascript"></script>
-    <script src="./js/bootstrap.min.js" type="text/javascript"></script>-->
 </body>
 
 </html>
