--- a/src/main/resources/templates/docker/docker.html
+++ b/src/main/resources/templates/docker/docker.html
@@ -43,19 +43,22 @@
                 <div class="col mt-4 py-2 pt-3 px-3  rounded-4 shadow lightMode">
                     <div class="row text-end">
                         <div class="col text-start">
+                            <div th:switch="${name}">
+                                <h3 th:case="null">Novo Container</h3>
+                            </div>
                             <h3 id="title" th:text="*{name}">Nome do Container Docker</h2>
                         </div>
                         <div class="col-auto">
-                            <button class="btn btn-primary" id="btnSave">Salvar</button>
+                            <button class="btn btn-primary" type="submit">Salvar</button>
                         </div>
                         <div class="col-auto">
-                            <button class="btn btn-secondary" id="btnCancel">Cancelar</button>
+                            <a class="btn btn-secondary" th:href="gerenciarDocker.html" role="button">Cancelar</a>
                         </div>
                         <div class="col-auto">
                             <div class="form-check">
-                                <input class="form-check-input big-checkbox" type="checkbox" value="" id="AtivoCheck"
-                                    checked>
-                                <label class="form-check-label textSize px-2" for="AtivoCheck">
+                                <input checked="checked" class="form-check-input " type="checkbox" th:field="*{ativo}"
+                                    id="ativoCheckBox">
+                                <label class="form-check-label" for="ativoCheckBox">
                                     Ativo
                                 </label>
                             </div>
@@ -85,8 +88,17 @@
                 <div class="col mt-4 py-2 pt-3 px-3  rounded-4 shadow lightMode">
                     <div class="row fullSize">
                         <div class="col fullSize">
-                            <h3 id="description">Arquivo .yml</h3>
-                            <input class="form-control" type="file" id="formFile">
+                            <h3 id="description">Configuração</h3>
+                            <div class="mb-3">
+                                <label for="nomeContainer" class="form-label">Nome</label>
+                                <input type="text" class="form-control" id="nomeContainer" placeholder="Container">
+                            </div>
+                            <div class="mb-3">
+                                <label for="imagemContainer" class="form-label">Imagem</label>
+                                <input type="text" class="form-control" id="imagemContainer"
+                                    placeholder="maven:3-amazoncorretto-19">
+                            </div>
+                            <!--<input class="form-control" type="file" id="formFile">-->
                         </div>
                     </div>
                 </div>
