--- a/src/main/resources/templates/user/gerenciarUsuarios.html
+++ b/src/main/resources/templates/user/gerenciarUsuarios.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" th:href="@{/css/dash.css}" type="text/css">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
     <script th:src="@{/js/menu.js}" type="text/javascript"></script>
+    <script th:src="@{/js/bootstrap/bootstrap.bundle.js}" type="text/javascript"></script>
     <title id="Title">Usuário</title>
 </head>
 
@@ -37,7 +38,7 @@
                                 id="cadastrarCliente">Novo</a>
                         </div>
                     </div>
-                    <div class="form-row overflow-auto">
+                    <div class="form-row">
                         <div th:switch="${usuarios}">
                             <h3 th:case="null">Sem Usuários Cadastrados!!!</h3>
                             <table th:case="*" class="table table-striped">
@@ -53,9 +54,18 @@
                                     <td th:text="${usuario.nome}">...</td>
                                     <td th:text="${usuario.email}">...</td>
                                     <td>
-                                        <h6 th:each="regra : ${usuario.roles}"
-                                            th:text="${#strings.substring(#strings.replace(regra.role, '&#95;', '&#32;'),5)}">
-                                            ...</h6>
+                                        <div class="dropdown">
+                                            <button class="btn btn-secondary dropdown-toggle" type="button"
+                                                id="dropdownMenuButton1" data-bs-toggle="dropdown"
+                                                aria-expanded="false">
+                                                Lista
+                                            </button>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                <li><a class="dropdown-item" th:each="regra : ${usuario.roles}"
+                                                        th:text="${#strings.substring(#strings.replace(regra.role, '&#95;', '&#32;'),5)}">.</a>
+                                                </li>
+                                            </ul>
+                                        </div>
                                     </td>
                                     <td th:if="${usuario.ativo}">ATIVO</td>
                                     <td th:unless="${usuario.ativo}">INATIVO</td>
