--- a/src/main/resources/templates/user/cadastroUsuario.html
+++ b/src/main/resources/templates/user/cadastroUsuario.html
@@ -155,7 +155,7 @@
                   </label>
                 </div>
                 <!--DASH-->
-                <!--DOCKER-->
+                <!--DOCKER
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" th:field="*{accessDocker}">
                   <label class="form-check-label" for="formCheckBox">
@@ -174,7 +174,7 @@
                     Acesso ao Cadastro Docker
                   </label>
                 </div>
-                <!--DOCKER-->
+                DOCKER-->
                 <!--Formulário-->
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" th:field="*{accessForms}">
@@ -195,7 +195,7 @@
                   </label>
                 </div>
                 <!--Formulário-->
-                <!--Usuário-->
+                <!--Usuário
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" th:field="*{accessUsers}">
                   <label class="form-check-label" for="formCheckBox">
@@ -214,7 +214,7 @@
                     Acesso ao Cadastro Usuário
                   </label>
                 </div>
-                <!--Usuário-->
+                Usuário-->
                 <!--Clientes-->
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" th:field="*{accessClients}">
