--- a/src/main/resources/templates/clients/cadastroCliente.html
+++ b/src/main/resources/templates/clients/cadastroCliente.html
@@ -46,7 +46,7 @@
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="nomeFantasia">Nome Fantasia</label>
-                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome Fantasia"
                                 data-bs-content="Nome fantasia também chamado nome de marca, nome comercial ou nome de fachada, é a designação popular de título de estabelecimento utilizada por uma instituição.">?</button>
                             <!--is-valid-->
                             <input th:field="*{empresa.nomeFantasia}" type="text" class="form-control lightMode"
@@ -64,7 +64,7 @@
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="nomeRasaoSocial">Nome Razão Social</label>
-                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Razão Social"
                                 data-bs-content="Razão social é o termo registrado sob o qual uma pessoa jurídica (PJ) se individualiza e exerce suas atividades.">?</button>
                             <!--is-valid-->
                             <input th:field="*{empresa.nomeRazaoSocial}" type="text" class="form-control lightMode"
@@ -99,7 +99,7 @@
                             <div class="form-row">
                                 <div class="col-md mb-3">
                                     <label for="validationSenha">Senha</label>
-                                    <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                                    <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Senha"
                                         data-bs-content="A senha deve conter caracteres especiais (!@#$), letras maiúsculas, minúsculas e números">?</button>
                                     <!--is-valid-->
                                     <input th:field="*{senha}" type="password" class="form-control lightMode"
@@ -107,19 +107,19 @@
                                     <div class="valid-feedback">
                                         Senha válida!
                                     </div>
-        
+
                                     <div class="invalid-feedback">
                                         Senha Inválida!.
                                     </div>
                                 </div>
                             </div>
-        
-        
-        
+
+
+
                             <div class="form-row">
                                 <div class="col-md mb-3">
                                     <label for="validationSenhaConf">Confirme a Senha</label>
-                                    <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                                    <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Senha"
                                         data-bs-content="A confirmação de senha deve ser igual a senha digitada">?</button>
                                     <!--is-valid-->
                                     <input type="password" class="form-control lightMode" id="validationSenhaConf"
@@ -127,7 +127,7 @@
                                     <div class="valid-feedback">
                                         Senha válida!
                                     </div>
-        
+
                                     <div class="invalid-feedback">
                                         Senha Inválida!.
                                     </div>
@@ -139,7 +139,7 @@
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="validationEmail">Email</label>
-                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Email"
                                 data-bs-content="Email de acesso do cliente.">?</button>
                             <!--is-valid-->
                             <input th:field="*{email}" type="email" class="form-control lightMode" id="validationEmail"
