--- a/src/main/resources/templates/user/cadastroUsuario.html
+++ b/src/main/resources/templates/user/cadastroUsuario.html
@@ -62,7 +62,7 @@
             <div class="form-row" novalidate>
               <div class="col-md mb-3">
                 <label for="validationEmail">E-mail (Obrigatório)</label>
-                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="E-mail"
                   data-bs-content="Coloque o email utilizado pelo funcionário">?</button>
                 <input th:field="*{email}" type="text" class="form-control lightMode" id="validationEmail"
                   placeholder="exemplo@email.com" required>
@@ -77,7 +77,7 @@
 
               <div class="col-md mb-3">
                 <label for="validationSenha">Senha (Obrigatório)</label>
-                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Senha"
                   data-bs-content="A senha deve conter caracteres especiais (!@#$), letras maiúsculas, minúsculas e números">?</button>
                 <input th:field="*{senha}" type="password" class="form-control lightMode" id="validationSenha"
                   placeholder="********" required>
@@ -92,7 +92,7 @@
 
               <div class="col-md mb-3">
                 <label for="validationSenhaConf">Confirmação da Senha (Obrigatório)</label>
-                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Confirmação da Senha"
                   data-bs-content="A confirmação de senha deve ser igual a senha digitada">?</button>
                 <input type="password" class="form-control lightMode" id="validationSenhaConf" placeholder="********"
                   required>
@@ -108,7 +108,7 @@
 
             <div class="col-md mb-3">
               <label for="validationCelular">Celular</label>
-              <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+              <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Celular"
                 data-bs-content="Colocar o telefone de contato caso necessário">?</button>
               <div class="input-group">
                 <span class="input-group-text lightMode" id="inputGroupPrepend3">+55</span>
@@ -126,7 +126,7 @@
             <div class="form-row">
               <div class="col-md mb-3">
                 <label for="validationAtuacao">Atuação</label>
-                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Atuação"
                   data-bs-content="Colocar uma descrição da atuação do usuário para facilitar o gerenciamento posterior">?</button>
                 <input th:field="*{atuacao}" type="text" class="form-control lightMode" id="validationAtuacao"
                   placeholder="Gerente de Marketing">
